WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86158
Overlay scrollbars without layers never paint in overflow regions in tiled drawing mode
https://bugs.webkit.org/show_bug.cgi?id=86158
Summary
Overlay scrollbars without layers never paint in overflow regions in tiled dr...
Beth Dakin
Reported
2012-05-10 16:47:21 PDT
Overlay scrollbars without layers never paint in overflow regions in tiled drawing mode. <
rdar://problem/11289546
>
Attachments
Patch
(4.48 KB, patch)
2012-05-10 16:56 PDT
,
Beth Dakin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-05-10 16:56:56 PDT
Created
attachment 141295
[details]
Patch
Darin Adler
Comment 2
2012-05-10 17:16:47 PDT
Comment on
attachment 141295
[details]
Patch Can we land a regression test for this? Manual test if necessary?
Beth Dakin
Comment 3
2012-05-10 17:22:18 PDT
We don't have a way to test overlay scrollbars, and we also don't have a way to test tiled drawing. Even the very simplest <div style="overflow:scroll"> will demonstrate the bug (so long as there is enough overflow to require the scrollbar). I definitely could land a manual test like that, but it's so simple that I'm not sure it's valuable. Is it?
Beth Dakin
Comment 4
2012-05-11 13:34:28 PDT
http://trac.webkit.org/changeset/116711
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug